--- a/main.css
+++ b/main.css
@@ -12,6 +12,12 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.wordss{
+    margin-top: -20px;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
 .letters{
     width: 400px;
     justify-content: center;
